--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,11 +1,5 @@
 {
-
     "globalHeaders": {
-  
-      "Access-Control-Allow-Origin": "*",
-  
-      "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
-  
+        "Access-Control-Allow-Origin": "*"
+        }
     }
-  
-  }
