--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,5 +1,6 @@
 {
     "globalHeaders": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "*",
+        "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
         }
     }
