--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,6 +1,10 @@
 {
-    "globalHeaders": {
-        "Access-Control-Allow-Origin": "*",
-        "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
+        "globalHeaders": {
+          "Access-Control-Allow-Origin": "",
+          "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
         }
+      ,
+        "mimeTypes": {
+            ".json": "text/json"
+          }
     }
