--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,9 +1,8 @@
 {
         "globalHeaders": {
-          "Access-Control-Allow-Origin": "",
-          "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
-        }
-      ,
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET"
+        },
         "mimeTypes": {
             ".json": "text/json"
           }
