--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -73,9 +73,10 @@
         "rewrite": "/404.html"
       }
     },
-    "globalHeaders": {
-      "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
-    },
+        "globalHeaders": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
+        },
     "mimeTypes": {
       ".json": "text/json"
     }
