--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -74,7 +74,7 @@
       }
     },
         "globalHeaders": {
-          "Access-Control-Allow-Origin": ""
+          "Access-Control-Allow-Origin": "*"
         },
     "mimeTypes": {
       ".json": "text/json"
