--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -1,5 +1,9 @@
 {
     "routes": [
+        {
+            "route": "/assets",
+            "allowedRoles": ["assets"]
+          },
       {
         "route": "/profile*",
         "allowedRoles": ["authenticated"]
