--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -10,9 +10,7 @@
       },
       {
         "route": "/images/*",
-        "headers": {
-          "cache-control": "must-revalidate, max-age=15770000"
-        }
+        "methods": ["GET"]
       },
       {
         "route": "/api/*",
