--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -45,8 +45,7 @@
       }
     ],
     "navigationFallback": {
-      "rewrite": "index.html",
-      "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+      "rewrite": "index.html"
     },
     "responseOverrides": {
       "400": {
